AC_INIT(README)
AM_INIT_AUTOMAKE(numptyphysics,0.3)
#AM_CONFIG_HEADER(amconfig.h)

AC_PROG_CC
AC_PROG_CXX
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AC_PROG_RANLIB

# Check for SDL
AC_CHECK_HEADER(
	SDL/SDL.h,
	AC_DEFINE(
		[HAVE_LIBSDL],
		[],
		Define to 1 if you have the <SDL/SDL.h> header file.
		)
		SDL_LIBS="-lSDL"
		sdl=yes,
	AC_MSG_ERROR([*** no SDL/SDL.h - SDL not found])
)
AC_SUBST(SDL_CFLAGS)
AC_SUBST(SDL_LIBS)

# Check for SDL_image library
AC_CHECK_LIB(SDL_image, IMG_LoadPNG_RW, , AC_MSG_ERROR([
*** Unable to find SDL_image libary with PNG support
]))

AC_ARG_ENABLE(hildon, [  --disable-hildon             build without maemo/hildon support], enable_hildon=$enableval, enable_hildon=yes)

if test "x${enable_hildon}" = "xyes" ; then
   PKG_CHECK_MODULES(GLIB, [glib-2.0], [], [])
   PKG_CHECK_MODULES(DBUS, [dbus-1], [], [])
   PKG_CHECK_MODULES(HILDON, [hildon-1], [enable_hildon=yes], [enable_hildon=no])
fi
if test "x${enable_hildon}" = "xyes" ; then
   AC_DEFINE( [USE_HILDON],[], using hildon )
   AC_SUBST(HILDON_CFLAGS)
   AC_SUBST(HILDON_LIBS)
   AC_SUBST(GLIB_CFLAGS)
   AC_SUBST(GLIB_LIBS)
   AC_SUBST(DBUS_CFLAGS)
   AC_SUBST(DBUS_LIBS)
fi


AC_CHECK_LIB(stdc++, main)
AC_CHECK_LIB(X11, main)


AC_OUTPUT(Makefile)
